--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,17 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.RELEASE_VERSION }}
+
+      - name: Setup node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.x
+
+      - name: Build
+        run: yarn build
+
+      - name: Archive
+        run: yarn archive
           
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
