--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.RELEASE_VERSION }}
+          submodules: 'true'
 
       - name: Setup node.js
         uses: actions/setup-node@v4
