--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,6 +54,6 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
           tags: ghcr.io/${{ github.repository }}:${{ env.RELEASE_VERSION }}, ghcr.io/${{ github.repository }}:latest
