--- a/.github/workflows/multiarch-build.yml
+++ b/.github/workflows/multiarch-build.yml
@@ -32,6 +32,20 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY_IMAGE }}
+
+      - name: Setup node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.x
+
+      - name: Install packages
+        run: yarn --frozen-lockfile
+
+      - name: Build
+        run: yarn build
+
+      - name: Archive
+        run: yarn archive
       
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
