--- a/.github/workflows/multiarch-build.yml
+++ b/.github/workflows/multiarch-build.yml
@@ -32,6 +32,10 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY_IMAGE }}
+      
+      - uses: actions/checkout@v4
+        with:
+          submodules: 'true'
 
       - name: Setup node.js
         uses: actions/setup-node@v4
@@ -64,6 +68,8 @@ jobs:
         id: build
         uses: docker/build-push-action@v6
         with:
+          context: .
+          file: ./Dockerfile
           platforms: ${{ matrix.platform }}
           labels: ${{ steps.meta.outputs.labels }}
           outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
